Suppress dynamic Java agent warning